[tool.poetry]
#name = "cycls-dev"
#version = "0.0.1.3"

name = "cycls"
version = "0.0.2.7"

packages = [{ include = "cycls" }]
description = "Cycls SDK"
authors = ["Mohammed Jamal <mj@cycls.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.111.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"