[tool.poetry]
name = "cycls"
version = "0.0.2.20"

packages = [{ include = "cycls" }]
description = "Cycls SDK"
authors = ["Mohammed Jamal <mj@cycls.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.111.0"
httpx = "^0.27.0"
asyncssh = "^2.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"