[tool.poetry]
name = "cycls"
version = "0.0.2.30"

packages = [{ include = "cycls" }]
include = ["cycls/theme/**/*"]
description = "Cycls SDK"
authors = ["Mohammed J. AlRujayi <mj@cycls.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
httpx = "^0.27.0"
modal = "^1.1.0"
jwt = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"